# GPU_CSC367

./: .gitignore  CMakeLists.txt  README.md  profile_stride_example.sh  profile_warp_example.sh  profiling_snippets.txt  run_cpu_example.sh  run_stride_example.sh  run_warp_example.sh
demo/: CPU_example.cpp  latency_hiding_example.cu  shared_memory_basic.cu  shared_memory_no_conflict.cu  simple_copy.cu  stencil_example.cu  stream_example.cu  stream_image_blur_example.cu  stride_example.cu  warp_example.cu
demo/utils/: csv_writer.h  pgm_io.h
local_scripts/: profile_latency_hiding_example.sh  profile_shared_memory.sh  profile_stencil_example.sh  profile_stream_example.sh  profile_stream_image_blur_example.sh  profile_stride_example.sh  profile_warp_example.sh  run_cpu_example.sh  run_latency_hiding_example.sh  run_shared_memory.sh  run_shared_memory_basic.sh  run_simple_copy.sh  run_stencil_example.sh  run_stream_example.sh  run_stream_image_blur_example.sh  run_stride_example.sh  run_warp_example.sh
python_scripts/: plot_latency_hiding.py  plot_shared_memory.py  plot_stencil.py  plot_stream.py  plot_stride.py  plot_warp.py  prepare_image.py
snippets/: latency_hiding_snippets.txt  shared_memory_snippets.txt  slides_snippets.txt  stencil_snippets.txt  stream_snippets.txt
wolf_scripts/: build.sh  profile_shared_memory.sh  profile_warp_example.sh  run_shared_memory.sh
